# brother-ql-rs

./: .gitignore  Cargo.toml  README.md
brother-ql-rs/: Cargo.toml
brother-ql-rs/src/: printer.rs
brother-ql-rs/src/printer/: command.rs  constants.rs  job.rs  media_type.rs  setting.rs  status_type.rs
examples/print-barcode/: Cargo.toml
examples/print-barcode/src/: main.rs
examples/print-image/: Cargo.toml
examples/print-image/src/: main.rs
examples/print-qrcode/: Cargo.toml
examples/print-qrcode/src/: main.rs
examples/print-text/: Cargo.toml
examples/print-text/src/: main.rs
src/: lib.rs  printer.rs
src/printer/: command.rs  job.rs  model.rs  setting.rs
