[package]
name = "brother-ql-rs"
version = "0.2.1"
edition = "2018"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
description = "Print to QL-series thermal label printers from Brother"
readme = "README.md"
license = "MIT"
repository = "https://github.com/petschekr/brother-ql-rs"

[dependencies]
rusttype = "0.9.3"
rusb = "0.9.1"
error-chain = "0.12.1"
